--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,9 @@ body main #cyclone-accordion .accordion-panel:has([aria-expanded='true']) {
 
 body main #cyclone-accordion .accordion-content {
   max-height: calc(100% - var(--_button-size));
+}
+
+body main #cyclone-accordion .accordion-panel:has([aria-expanded='true']) .accordion-content {
   -webkit-overflow-scrolling: touch;
   overflow-y: scroll;
 }
