--- a/css/styles.css
+++ b/css/styles.css
@@ -302,6 +302,7 @@ body main #cyclone-accordion .accordion-panel::before {
   width: 100%;
   position: absolute;
   transition: opacity 0.5s ease-in-out;
+  z-index: -1;
 }
 
 body main #cyclone-accordion .accordion-panel:has([aria-expanded='true'])::before {
@@ -364,9 +365,7 @@ body main #cyclone-accordion .accordion-content {
 }
 
 body main #cyclone-accordion .accordion-panel:has([aria-expanded='true']) .accordion-content {
-  -webkit-overflow-scrolling: touch;
   overflow-y: scroll;
-  touch-action: pan-y;
 }
 
 body main #cyclone-accordion .accordion-content > p {
