--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,8 @@ body main #cyclone-accordion .accordion-panel:has([aria-expanded='true']) {
 
 body main #cyclone-accordion .accordion-content {
   max-height: calc(100% - var(--_button-size));
+  position: relative;
+  z-index: 1;
 }
 
 body main #cyclone-accordion .accordion-panel:has([aria-expanded='true']) .accordion-content {
