--- a/css/styles.css
+++ b/css/styles.css
@@ -301,8 +301,8 @@ body main #cyclone-accordion .accordion-panel::before {
   opacity: 0.3;
   width: 100%;
   position: absolute;
-  transition: opacity 0.5s ease-in-out;
-  z-index: -1;
+  transition: opacity 0.5s ease-in-out 0.5s;
+  z-index: 0;
 }
 
 body main #cyclone-accordion .accordion-panel:has([aria-expanded='true'])::before {
@@ -399,13 +399,13 @@ body main #cyclone-accordion .accordion-title {
   position: relative;
 }
 
-body main #cyclone-accordion .accordion-background {
-  /* background: linear-gradient(to bottom, black, transparent, transparent, silver); */
+body main #cyclone-accordion .accordion-image {
   height: 100%;
   inset: 0;
-  opacity: 0.3;
+  opacity: 0.5;
+  height: 100%;
+  object-fit: cover;
   position: absolute;
-  transition: opacity 0.5s ease-in-out;
   width: 100%;
   z-index: -1;
 }
