--- a/css/styles.css
+++ b/css/styles.css
@@ -213,21 +213,21 @@ body main #cyclone-accordion-container #cyclone-accordion-close-button {
   display: none;
   filter: drop-shadow(0 0 8px);
   font-size: 2rem;
+  line-height: 1;
   opacity: 0;
+  padding-bottom: 5px;
   position: absolute;
   right: var(--_accordion-padding);
-  top: -55px;
-  transform: scale(0) rotate(3turn);
+  top: -8%;
+  transform: scale(0) rotate(1turn);
   transition: transform 1s ease-in-out, opacity 0.5s ease-in-out 0.5s;
 }
 
 body main #cyclone-accordion-container.active #cyclone-accordion-close-button {
-  display: inline-block;
-}
-
-body main #cyclone-accordion-container.active #cyclone-accordion-close-button {
+  display: grid;
+  place-items: center;
   opacity: 1;
-  transform: scale(1) rotate(0turn);
+  transform: scale(1) rotate(1turn);
 }
 
 body
@@ -235,8 +235,8 @@ body
   #cyclone-accordion-container.active
   #cyclone-accordion-close-button:hover {
   color: red;
-  transform: scale(1.3);
-  transition: transform 100ms ease-in-out;
+  transform: scale(1.5) rotate(0turn);
+  transition: transform 380ms ease-in-out;
 }
 
 body
